[package]
name = "echo_server"
version = "0.1.0"
authors = ["oda-daisuke <oda-daisuke@kcgrp.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix = "0.9.0"
actix-web = "2.0.0"
actix-web-actors = "2.0.0"
libc = "0.2"
log = "0.4"
